--- a/myapp/templates/shop-grid-ls.html
+++ b/myapp/templates/shop-grid-ls.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  
   <!-- Google Analytics Content Experiment code -->
   <script>function utmx_section() { } function utmx() { } (function () {
       var
@@ -439,62 +441,7 @@
             <i class="icon-bag"></i>
             <span class="count">3</span>
             <span class="subtotal">$289.68</span>
-            <!-- <div class="toolbar-dropdown">
-              <div class="dropdown-product-item">
-                <span class="dropdown-product-remove">
-                  <i class="icon-cross"></i>
-                </span>
-                <a class="dropdown-product-thumb" href="shop-single.html">
-                  <img src="static/img/cart-dropdown/01.jpg" alt="Product">
-                </a>
-                <div class="dropdown-product-info">
-                  <a class="dropdown-product-title" href="shop-single.html">Unionbay Park</a>
-                  <span class="dropdown-product-details">1 x $43.90</span>
-                </div> -->
-              <!-- </div>
-              <div class="dropdown-product-item">
-                <span class="dropdown-product-remove">
-                  <i class="icon-cross"></i>
-                </span>
-                <a class="dropdown-product-thumb" href="shop-single.html">
-                  <img src="static/img/cart-dropdown/02.jpg" alt="Product">
-                </a>
-                <div class="dropdown-product-info">
-                  <a class="dropdown-product-title" href="shop-single.html">Daily Fabric Cap</a>
-                  <span class="dropdown-product-details">2 x $24.89</span>
-                </div>
-              </div>
-              <div class="dropdown-product-item">
-                <span class="dropdown-product-remove">
-                  <i class="icon-cross"></i>
-                </span>
-                <a class="dropdown-product-thumb" href="shop-single.html">
-                  <img src="static/img/cart-dropdown/03.jpg" alt="Product">
-                </a>
-                <div class="dropdown-product-info">
-                  <a class="dropdown-product-title" href="shop-single.html">Haan Crossbody</a>
-                  <span class="dropdown-product-details">1 x $200.00</span>
-                </div>
-              </div>
-              <div class="toolbar-dropdown-group">
-                <div class="column">
-                  <span class="text-lg">Total:</span>
-                </div>
-                <div class="column text-right">
-                  <span class="text-lg text-medium">$289.68&nbsp;</span>
-                </div>
-              </div>
-              <div class="toolbar-dropdown-group">
-                <div class="column">
-                  <a class="btn btn-sm btn-block btn-secondary" href="cart.html">View Cart</a>
-                </div>
-                <div class="column">
-                  <a class="btn btn-sm btn-block btn-success" href="checkout-address.html">Checkout</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
+            
       </div>
     </div>
   </header>
@@ -570,7 +517,7 @@
                   <a href="shop-single.html">{{p.product_name}} </a>
                 </h3>
                 <h4 class="product-price">
-                  <del>$99.99</del>{{p.product_price}}
+                  <span> ₹{{p.product_price}}</span>
                 </h4>
                 <div class="product-buttons">
                   <button class="btn btn-outline-secondary btn-sm btn-wishlist" data-toggle="tooltip" title="Whishlist">
@@ -620,26 +567,7 @@
             <i class="icon-layout"></i>
           </button>
           <aside class="sidebar sidebar-offcanvas">
-            <!-- Widget Categories-->
-            <!-- <section class="widget widget-categories">
-              <h3 class="widget-title">Shop Categories</h3>
-              <ul>
-                {% for i in mid %}
-                <li class="has-children expanded">
-                  
-                  <a href="{% url 'shopgrid' %}?mid2={{i.id}}">{{i.name}}</a>
-                  <ul>
-                    {% for s in sid2  %}
-                    <li>
-                      <a href="/shopgrid?sid2={{s.id}} ">{{s.sub_name}}</a>
-                    </li>
-                    {% endfor %}
-                  </ul>
-                </li>
-                {% endfor %}
-              </ul>
-            </section> -->
-            <!-- Widget Price Range-->
+            
             <section class="widget widget-categories">
               <h3 class="widget-title">Shop Categories</h3>
               <ul>
@@ -658,20 +586,9 @@
                   </li>
                   {% endfor %}
               </ul>
-          </section> 
+            </section> 
           
-          <!-- Display Filtered Products -->
-          <!-- <div class="product-list">
-              {% for product in pid %}
-                  <div class="product">
-                      <h4>{{ product.product_name }}</h4>
-                      <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}">
-                      <p>Price: {{ product.product_price }}</p>
-                  </div>
-              {% empty %}
-                  <p>No products found.</p>
-              {% endfor %}
-          </div> -->
+        
           
             <section class="widget widget-categories">
               <h3 class="widget-title">Price Range</h3>
@@ -731,43 +648,21 @@
               </div>
             </section>
             <!-- Widget Size Filter-->
-            <section class="widget">
-              <h3 class="widget-title">Filter by Size</h3>
-              <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" id="xl">
-                <label class="custom-control-label" for="xl">XL&nbsp;
-                  <span class="text-muted">(208)</span>
-                </label>
-              </div>
-              <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" id="l">
-                <label class="custom-control-label" for="l">L&nbsp;
-                  <span class="text-muted">(311)</span>
-                </label>
-              </div>
-              <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" id="m">
-                <label class="custom-control-label" for="m">M&nbsp;
-                  <span class="text-muted">(485)</span>
-                </label>
-              </div>
-              <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" id="s">
-                <label class="custom-control-label" for="s">S&nbsp;
-                  <span class="text-muted">(213)</span>
-                </label>
-              </div>
-            </section>
-            <!-- Promo Banner-->
-            <!-- <section class="promo-box" style="background-image: url(img/banners/02.jpg);">
-              Choose between .overlay-dark (#000) or .overlay-light (#fff) with default opacity of 50%. You can overrride default color and opacity values via 'style' attribute.
-              <span class="overlay-dark" style="opacity: .45;"></span>
-              <div class="promo-box-content text-center padding-top-3x padding-bottom-2x">
-                <h4 class="text-light text-thin text-shadow">New Collection of</h4>
-                <h3 class="text-bold text-light text-shadow">Sunglassess</h3>
-                <a class="btn btn-sm btn-primary" href="#">Shop Now</a>
-              </div>
-            </section> -->
+            <form action="{% url 'size_filter_product' %}" method="get" >
+              {% csrf_token %}
+              <section class="widget">
+                <h3 class="widget-title">Filter by Size</h3>
+                {% for i in sfid %}
+                <div >
+                    <input type="checkbox" name="size" value="{{ i.size }}" >
+                    {{ i.size }}
+
+                </div>
+                {% endfor %}
+                <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
+              </section>
+            </form>
+          
           </aside>
         </div>
       </div>
