--- a/myapp/templates/shop-grid-ls.html
+++ b/myapp/templates/shop-grid-ls.html
@@ -69,7 +69,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <!-- Widget Categories-->
+          <!--* Widget Categories-->
           <section class="widget widget-categories">
             <h3 class="widget-title">Shop Categories</h3>
             <ul>
@@ -219,18 +219,21 @@
               </li>
             </ul>
           </section>
-          <!-- Widget Price Range-->
+          <!--* Widget Price Range-->
           <section class="widget">
+
             <h3 class="widget-title">Price Range</h3>
+            <form action="{% url 'price_filter' %}" method="post"></form>
+            {% csrf_token %}
             <select class="form-control">
-              <option>0 - $100</option>
+            <!--  <option>0 - $100</option>
               <option>$100 - $200</option>
               <option>$200 - $500</option>
               <option>$500 - $1000</option>
               <option>$1000 - $5000</option>
-            </select>
+            </select> -->
           </section>
-          <!-- Widget Brand Filter-->
+          <!--* Widget Brand Filter-->
           <section class="widget">
             <h3 class="widget-title">Filter by Brand</h3>
             <div class="custom-control custom-checkbox">
@@ -264,7 +267,7 @@
               </label>
             </div>
           </section>
-          <!-- Widget Size Filter-->
+          <!--* Widget Size Filter-->
           <section class="widget">
             <h3 class="widget-title">Filter by Size</h3>
             <div class="custom-control custom-checkbox">
@@ -592,28 +595,27 @@
           
             <section class="widget widget-categories">
               <h3 class="widget-title">Price Range</h3>
-              <form class="price-range-slider" method="post" data-start-min="250" data-start-max="650" data-min="0" data-max="1000" data-step="1">
+              <form action="{% url 'price_filter' %}" method="post" class="price-range-slider" data-start-min="250" data-start-max="650" data-min="0" data-max="1000" data-step="1">
+                {% csrf_token %}
                 <div class="ui-range-slider"></div>
                 <footer class="ui-range-slider-footer">
                   <div class="column">
-                    <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
-                  </div>
-                  <div class="column">
                     <div class="ui-range-values">
-                      <div class="ui-range-value-min">$
-                        <span></span>
-                        <input type="hidden">
+                      <div class="ui-range-value-min">
+                        $<span></span>
+                        <input type="hidden" name="min_num" value="{{min_num}}">
                       </div>&nbsp;-&nbsp;
-                      <div class="ui-range-value-max">$
-                        <span></span>
-                        <input type="hidden">
+                      <div class="ui-range-value-max">
+                        $<span></span>
+                        <input type="hidden" name="max_num" value="{{max_num}}">
                       </div>
                     </div>
                   </div>
                 </footer>
+                <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
               </form>
             </section>
-            <!-- Widget Brand Filter-->
+            <!--* Widget Brand Filter-->
             <section class="widget">
               <h3 class="widget-title">Filter by Brand</h3>
               <div class="custom-control custom-checkbox">
@@ -647,7 +649,7 @@
                 </label>
               </div>
             </section>
-            <!-- Widget Size Filter-->
+            <!--* Widget Size Filter-->
             <form action="{% url 'size_filter_product' %}" method="post" >
               {% csrf_token %}
               <section class="widget">
