--- a/myapp/templates/shop-grid-ls.html
+++ b/myapp/templates/shop-grid-ls.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -410,7 +411,7 @@
           <div class="search">
             <i class="icon-search"></i>
           </div>
-          <div class="account">
+          <!-- <div class="account">
             <a href="account-orders.html"></a>
             <i class="icon-head"></i>
             <ul class="toolbar-dropdown">
@@ -438,7 +439,7 @@
                   <i class="icon-unlock"></i>Logout</a>
               </li>
             </ul>
-          </div>
+          </div> -->
           <div class="cart">
             <a href="{% url 'cart' %}"></a>
             <i class="icon-bag"></i>
@@ -532,9 +533,6 @@
               </div>
             </div>
             {% endfor %}
-            <!-- Product-->
-            <!-- all data -->
-          <!-- Pagination-->
           </div>
           <nav class="pagination">
             <div class="column">
@@ -564,7 +562,6 @@
             </div>
           </nav>
         </div>
-        <!-- Sidebar          -->
         <div class="col-xl-3 col-lg-4 order-lg-1">
           <button class="sidebar-toggle position-left" data-toggle="modal" data-target="#modalShopFilters">
             <i class="icon-layout"></i>
@@ -590,9 +587,6 @@
                   {% endfor %}
               </ul>
             </section> 
-          
-        
-          
             <section class="widget widget-categories">
               <h3 class="widget-title">Price Range</h3>
               <form action="{% url 'price_filter' %}" method="post" class="price-range-slider" data-start-min="250" data-start-max="650" data-min="0" data-max="1000" data-step="1">
@@ -616,15 +610,20 @@
               </form>
             </section>
             <!--* Widget Brand Filter-->
-            <section class="widget">
-              <h3 class="widget-title">Filter by Brand</h3>
-              <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" id="adidas">
-                <label class="custom-control-label" for="adidas">Adidas&nbsp;
-                  <span class="text-muted">(254)</span>
-                </label>
-              </div>
-              <div class="custom-control custom-checkbox">
+            <form action="{% url 'Brand_filter_product' %}" method="post">
+              {% csrf_token %}
+              <section class="widget">
+                  <h3 class="widget-title">Filter by Brand</h3>
+                  {% for b in Bid %}
+                  <div>
+                      <input type="checkbox" name="brand" value="{{ b.id }}"> {{ b.brand }}
+                  </div>
+                  {% endfor %}
+                  <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
+              </section>
+          </form>
+          
+              <!-- <div class="custom-control custom-checkbox">
                 <input class="custom-control-input" type="checkbox" id="bilabong">
                 <label class="custom-control-label" for="bilabong">Bilabong&nbsp;
                   <span class="text-muted">(39)</span>
@@ -646,25 +645,33 @@
                 <input class="custom-control-input" type="checkbox" id="bahama">
                 <label class="custom-control-label" for="bahama">Tommy Bahama&nbsp;
                   <span class="text-muted">(42)</span>
+                
                 </label>
-              </div>
-            </section>
+              </div> -->
             <!--* Widget Size Filter-->
-            <form action="{% url 'size_filter_product' %}" method="post" >
+            <form action="{% url 'size_filter_product' %}" method="post">
               {% csrf_token %}
               <section class="widget">
                 <h3 class="widget-title">Filter by Size</h3>
                 {% for i in sfid %}
-                <div >
-                    <input type="checkbox" name="size" value="{{ i.size }}" >
-                    {{ i.size }}
-
+                <div>
+                  <input type="checkbox" name="size" value="{{ i.size }}">
+                  {{ i.size }} 
+<!--                   
+                  {% for key,value in size_counts.items %}
+                    {% if key == i.size %}
+                      <span>{{ value }}</span>
+                    {% endif %}
+                  {% endfor %} -->
                 </div>
                 {% endfor %}
                 <button class="btn btn-outline-primary btn-sm" type="submit">Filter</button>
               </section>
             </form>
-          
+            
+            <!-- {% if size %}
+            <p>Showing {{ count_item }} item(s) for size {{ size }}</p>
+            {% endif %} -->
           </aside>
         </div>
       </div>
