--- a/myapp/templates/shop-grid-ls.html
+++ b/myapp/templates/shop-grid-ls.html
@@ -5,7 +5,8 @@
 
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+
   <!-- Google Analytics Content Experiment code -->
   <script>function utmx_section() { } function utmx() { } (function () {
       var
@@ -529,13 +530,18 @@
                 <div class="product-buttons">
                   <form method="post" action="{% url 'wishlist' id=p.id %}" class="wishlist-form" data-product-id="{{ p.id }}">
                     {% csrf_token %}
-                      <button class="btn btn-outline-secondary btn-sm btn-wishlist wishlist-btn" title="whishlist">
-                      <img src="static/img/wishlistoff.png" style="height: 20px; width:20px;" class="wishlist-img" >
+                    <button class="btn btn-outline-secondary btn-sm btn-wishlist wishlist-btn" title="whishlist">
+                      {% if i in l1 %}
+                        <i class="bi bi-heart" style="color:black;"></i>
+                      {% else %}
+                        <i class="bi bi-heart-fill" style="color:red; "></i>
+                      {% endif %}
                     </button>
                   </form>
                   <button class="btn btn-outline-primary btn-sm" data-toast data-toast-type="success" data-toast-position="topRight" data-toast-icon="icon-circle-check"
                     data-toast-title="Product" data-toast-message="successfuly added to cart!">Add to Cart</button>
                 </div>
+                
               </div>
             </div>
             {% endfor %}
@@ -822,10 +828,10 @@
             .then((response) => response.json())
             .then((data) => {
               if (data.success) {
-                if (wishlistImg.src.includes("static/img/wishlistoff.png")) {
-                  wishlistImg.src = "static/img/wishliston.png";
+                if (data.added) {
+                  wishlistImg.src = "{% static 'img/wishliston.png' %}";
                 } else {
-                  wishlistImg.src = "static/img/wishlistoff.png";
+                  wishlistImg.src = "{% static 'img/wishlistoff.png' %}";
                 }
               }
             })
